View results margin-bottom was too much. Lowering this fixed popup issue

--- a/web/web/src/pages/ConnectionsPage.css
+++ b/web/web/src/pages/ConnectionsPage.css
@@ -313,7 +313,7 @@ h1 {
   box-sizing: border-box;
   font-size: 1.75vh;
   margin-bottom: 5vh;
-  margin-bottom: 100.375vh;
+  margin-bottom: 10.375vh;
 }
 
 .copy-summary-button {
